Add '--add-opens' to jvm args when running tests on JDK 16 and higher